samples/_failures_safe/1761443796_fe40cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f39e515.c: In function ‘main’:
./samples/SAFE/__tmp_3f39e515.c:139:5: error: expected ‘,’ or ‘;’ at end of input
  139 |     size_t compressed_size = compress_data
      |     ^~~~~~
./samples/SAFE/__tmp_3f39e515.c:139:5: error: expected declaration or statement at end of input
